Fix collapsible show list on mobile phones.
Fix appearance of show list items on mobile phones.
On page1.html, don't put footer columns in a container, as doing this will make the page wider than the visible content.
Add new script to Gruntfile, and compile and concatenate both scripts to bedazzled.js

--- a/less/bedazzled.less
+++ b/less/bedazzled.less
@@ -183,6 +183,10 @@
       > h3 {
         font-size: 14pt;
       }
+      @media (max-width: @bs-sm) {
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+      }
     }
   }
 }
@@ -190,7 +194,10 @@
 #bedazzled--main-shows-xs {
   > a[data-toggle=collapse] {
     color: @black;
-    &:hover, &:visited {
+    font-size: 250%;
+    text-align: center;
+    display: block;
+    &:hover, &:visited, &:active, &:focus {
       color: @black;
       text-decoration: none;
     }
